@@ -223,10 +223,11 @@ function _oauth_common_provider_consumer_schema() {
         'default'     => '',
       ),
       'callback_url' => array(
-        'description' => 'Callback url.',
+        'description' => 'Callback URL.',
         'type'        => 'varchar',
         'length'      => 255,
         'not null'    => TRUE,
+        'default'     => '',
       ),
     ),
     'primary key' => array('consumer_key'),
@@ -372,12 +373,6 @@ function _oauth_common_provider_token_schema() {
         'not null'    => TRUE,
         'default'     => 0,
       ),
-	  'verifier' => array(
-        'description' => 'Verification code (oauth_verifier) after authorization. (OAuth 1.0a)',
-        'type'        => 'varchar',
-        'length'      => 255,
-        'not null'    => FALSE,
-	  ),
     ),
     'primary key' => array('token_key'),
     'unique keys' => array(
@@ -393,27 +388,25 @@ function _oauth_common_provider_token_schema() {
 }
 
 /**
+ * This was renamed to update 7101 so it would run again.
+ */
+function oauth_common_update_7100() {}
+
+/**
  * Add callback_url field to {oauth_common_token} table.
  */
-function oauth_common_update_7100() {
+function oauth_common_update_7101() {
+  // Drop the wrongly created field.
+  if (db_field_exists('oauth_common_token', 'callback_url')) {
+    db_drop_field('oauth_common_token', 'callback_url');
+  }
+
   $spec = array(
-    'description' => 'Callback url.',
+    'description' => 'Callback URL.',
     'type'        => 'varchar',
     'length'      => 255,
     'not null'    => TRUE,
+    'default'     => '',
   );
-  db_add_field( 'oauth_common_token', 'callback_url', $spec);
-}
-
-/**
- * Add verifier (oauth_verifier) field to {oauth_common_provider_token} table.
- */
-function oauth_common_update_7101() {
-  $spec = array(
-    'description' => 'Verification code (oauth_verifier) after authorization. (OAuth 1.0a)',
-    'type'        => 'varchar',
-    'length'      => 255,
-    'not null'    => FALSE,
-  );
-  db_add_field( 'oauth_common_provider_token', 'verifier', $spec);
+  db_add_field('oauth_common_token', 'callback_url', $spec);
 }
